@@ -1656,9 +1656,7 @@ function get_stack(caller) {
                 div = $('<div/>').html(encodeHTML(string));
             }
             output.append(div);
-            /*
-                div.width('100%');
-            */
+            div.width('100%');
             scroll_to_bottom();
             return div;
         }
@@ -1853,7 +1851,7 @@ function get_stack(caller) {
                     }).get().join('\n');
                 }
             },
-            resize: function(width, height) {
+            resize: function(width, height) {                
                 if (width && height) {
                     self.width(width);
                     self.height(height);
@@ -2363,6 +2361,7 @@ function get_stack(caller) {
             } else {
                 self.disable();
             }
+
             $(window).resize(self.resize);
             self.click(function() {
                 self.focus();
