@@ -20,6 +20,8 @@ started.
 
 * Added more demo mirrors to readme (appfog, cloudfoundry).
 
+* Removed resing event from jquery-terminal.
+
 
 2012.10.01, Version 0.1.7
 
